--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom right, #f8e473, #fca5f1);
+      background: linear-gradient(to bottom right, #fceabb, #f8b500);
       margin: 0;
       padding: 0;
       color: #333;
     }
     header {
-      background-color: #fff;
+      background: linear-gradient(to right, #ffecd2, #fcb69f);
       padding: 20px;
       text-align: center;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -25,15 +25,30 @@
     h1 {
       margin-top: 10px;
       font-size: 2.5rem;
-      color: #f97316;
+      color: #ff4081;
     }
     p.tagline {
       font-size: 1.2rem;
       font-weight: bold;
+      color: #444;
     }
     main {
       padding: 2rem;
       text-align: center;
+      background: linear-gradient(to bottom right, #a1c4fd, #c2e9fb);
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 2rem;
+    }
+    .gallery img {
+      max-width: 200px;
+      border: 3px solid #fff;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
     }
     footer {
       background-color: #fff;
@@ -58,6 +73,12 @@
   <main>
     <h2>Welcome, Trainers!</h2>
     <p>Explore a growing collection of raw, ungraded Pokémon cards lovingly sourced and shipped from Murphy's den to yours!</p>
+
+    <div class="gallery">
+      <img src="card1.jpg" alt="Card 1" />
+      <img src="card2.jpg" alt="Card 2" />
+      <img src="card3.jpg" alt="Card 3" />
+    </div>
 
     <div class="contact">
       <p>Questions? Trades? Reach out to Ryan:</p>
