--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <div class="contact">
       <p>Questions? Trades? Reach out to Ryan:</p>
-      <p><strong>Email:</strong> ryan.teima@aol.com</p>
+      <p><strong>Email:</strong> murphamon.shop@gmail.com</p>
     </div>
   </main>
   <footer>
